style: fix mobile image cropping in index.css by setting height to auto

--- a/index.css
+++ b/index.css
@@ -1523,7 +1523,7 @@
     }
 
     .visual-card img {
-        height: 380px;
+        height: auto;
     }
 
     .overview-container {
@@ -1532,7 +1532,7 @@
     }
 
     .overview-image-wrapper img {
-        height: 380px;
+        height: auto;
     }
 
     .company-overview::before {
